--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 타이틀 -->
-    <title>메카스마 임팩트 특설 사이트</title>
+    <title>메카스마 임팩트 특설 사이트 -리뉴얼-</title>
     <!-- 파비콘 -->
     <link rel="icon" href="./img/favicon.ico" />
     <!-- CSS -->
@@ -21,20 +21,23 @@
 
   <body>
     <header class="flex">
-      <h1>
-        <a href="#"><img src="./img/logo_mecasma.png" alt="logo" /></a>
-      </h1>
-      <nav>
-        <ul id="button" class="button">
-          <li><a href="#about">메카스마</a></li>
-          <li><a href="#movie">영상</a></li>
-          <li><a href="#live">라이브</a></li>
-          <li><a href="#exhibition">전시전</a></li>
-          <li><a href="#sales">상품</a></li>
-          <li><a href="#gallery">갤러리</a></li>
-        </ul>
-      </nav>
-      <!-- //nav -->
+      <div class="wrapper flex">
+        <h1>
+          <a href="#"><img src="./img/logo_mecasma.png" alt="logo" /></a>
+        </h1>
+        <nav>
+          <ul id="button" class="button flex">
+            <li><a href="#about">메카스마</a></li>
+            <li><a href="#movie">영상</a></li>
+            <li><a href="#live">라이브</a></li>
+            <li><a href="#exhibition">전시전</a></li>
+            <li><a href="#sales">상품</a></li>
+            <li><a href="#gallery">갤러리</a></li>
+          </ul>
+        </nav>
+        <!-- //nav -->
+      </div>
+      <!-- //wrapper -->
 
       <div class="badges">
         <div class="badge">
@@ -53,7 +56,7 @@
 
     <main>
       <section class="main_kv">
-        <img src="./img/bnr_gallery_kr.png" alt="메인 키비주얼" />
+        <video autoplay muted loop src="./vidieo/main_kv.mp4"></video>
       </section>
       <!-- //title -->
 
