--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Noto+Serif+KR&display=swap" rel="stylesheet" />
+    <!-- bxSlider -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <!-- JS -->
     <script defer src="./JS/main.js"></script>
   </head>
@@ -310,11 +314,11 @@
               </div>
             </div>
 
-            <ul class="flex">
-              <li><img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" /></li>
-              <li><img src="./img/exhibition/exhibition_img01.png" alt="2021년 개최한「THE합체전」" /></li>
-              <li><img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" /></li>
-            </ul>
+            <div class="slider">
+              <div><img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" /></div>
+              <div><img src="./img/exhibition/exhibition_img01.png" alt="2021년 개최한「THE합체전」" /></div>
+              <div><img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" /></div>
+            </div>
             <p class="center">※사진은 2021년 개최한「THE합체전」의 사진입니다.</p>
           </section>
         </div>
@@ -335,20 +339,32 @@
               <dd><a href="https://goodsmile.link/3GS1OUy" target="_blank" rel="noopener">https://goodsmile.link/3GS1OUy</a></dd>
             </dl>
             <p class="">※수량에 제한이 있으므로 미리 양해 부탁드립니다.</p>
-            <ul class="flex">
-              <li class="">
+            <div class="slider">
+              <div class="">
                 <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
                 <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
-              </li>
-              <li class="">
+              </div>
+              <div class="">
                 <img src="./img/sales/item02.png" alt="THE 합체 그리드 나이트 &amp; 골드번" />
                 <p>THE 합체 그리드 나이트 &amp; 골드번</p>
-              </li>
-              <li class="">
+              </div>
+              <div class="">
                 <img src="./img/sales/item03.png" alt="MODEROID 불독 세트" />
                 <p>MODEROID 불독 세트</p>
-              </li>
-            </ul>
+              </div>
+              <div class="">
+                <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
+                <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+              </div>
+              <div class="">
+                <img src="./img/sales/item02.png" alt="THE 합체 그리드 나이트 &amp; 골드번" />
+                <p>THE 합체 그리드 나이트 &amp; 골드번</p>
+              </div>
+              <div class="">
+                <img src="./img/sales/item03.png" alt="MODEROID 불독 세트" />
+                <p>MODEROID 불독 세트</p>
+              </div>
+            </div>
             <a href="https://goodsmile.link/3GS1OUy" class="otherItem" target="_blank" rel="noopener"> <img src="./img/btn_otherItems_kr.png" alt="판매 상품 리스트" /></a>
           </section>
         </div>
