--- a/index.html
+++ b/index.html
@@ -102,157 +102,100 @@
           <p class="">여러분, 충격(임팩트)에 대비해 주세요.</p>
 
           <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" />
-                <p>
-                  MAX 와타나베 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2021.12.24</time>
-              </div>
-            </div>
+            <ul class="swiper-wrapper">
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="MAX 와타나베  <br> 스페셜 메시지 도착!!" title="클릭 후 메시지 확인" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/5_MAX-Watanabe.png" alt="MAX 와타나베" />
+                </div>
+                <div class="text">
+                  <p>
+                    MAX 와타나베 <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2021.12.24</time>
+                </div>
+              </li>
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="오타화  <br> 스페셜 메시지 도착!!" title="클릭 후 메시지 확인" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/2_Wotafa.png" alt="오타화" />
+                </div>
+                <div class="text">
+                  <p>
+                    오타화 <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2022.1.7</time>
+                </div>
+              </li>
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="아사이 마사키  <br> 스페셜 메시지 도착!!" title="클릭 후 메시지 확인" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/6_Masaki-Apsy.png" alt="아사이 마사키" />
+                </div>
+                <div class="text">
+                  <p>
+                    아사이 마사키 <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2022.1.12</time>
+                </div>
+              </li>
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="Gundam Holic TV / 제룡  <br> 스페셜 메시지 도착!!"
+                    title="클릭 후 메시지 확인" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/7_Gundam-Holic-TV.png" alt="제룡" />
+                </div>
+                <div class="text">
+                  <p>
+                    Gundam Holic TV / 제룡 <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2022.1.12</time>
+                </div>
+              </li>
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="NAOKI  <br> 스페셜 메시지 도착!!" title="클릭 후 메시지 확인" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/3_NAOKI.png" alt="NAOKI" />
+                </div>
+                <div class="text">
+                  <p>
+                    NAOKI <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2022.1.13</time>
+                </div>
+              </li>
+              <li class="card swiper-slide">
+                <div class="front">
+                  <img src="./img/comment/door_open.png" alt="MR.JOE  <br> 스페셜 메시지 도착!" />
+                </div>
+                <div class="back">
+                  <img src="./img/comment/4_MR.JOE.png" alt="MR.JOE" />
+                </div>
+                <div class="text">
+                  <p>
+                    MR.JOE <br />
+                    스페셜 메시지 도착!!
+                  </p>
+                  <time>2022.1.13</time>
+                </div>
+              </li>
+            </ul>
           </div>
-
-
-          <!-- 수정이 필요함 -->
-          <ul class="flex">
-            <li class="card">
-              <figure class="front">
-
-              </figure>
-              <div class="back">
-                <img src="./img/comment/5_MAX-Watanabe.png" alt="MAX 와타나베" />
-              </div>
-              <div class="text">
-
-              </div>
-            </li>
-
-            <li class="card">
-              <figure class="front">
-                <img src="./img/comment/door_open.png" alt="오타화  <br> 스페셜 메시지 도착!!" />
-              </figure>
-              <div class="back">
-                <img src="./img/comment/2_Wotafa.png" alt="오타화" />
-              </div>
-              <div class="text">
-                <p>
-                  오타화 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2022.1.7</time>
-              </div>
-            </li>
-            <li class="card">
-              <figure class="front">
-                <img src="./img/comment/door_open.png" alt="아사이 마사키  <br> 스페셜 메시지 도착!!" />
-              </figure>
-              <div class="back">
-                <img src="./img/comment/6_Masaki-Apsy.png" alt="아사이 마사키" />
-              </div>
-              <div class="text">
-                <p>
-                  아사이 마사키 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2022.1.12</time>
-              </div>
-            </li>
-            <li class="card">
-              <figure class="front">
-                <img src="./img/comment/door_open.png" alt="Gundam Holic TV / 제룡  <br> 스페셜 메시지 도착!!" />
-              </figure>
-              <div class="back">
-                <img src="./img/comment/7_Gundam-Holic-TV.png" alt="제룡" />
-              </div>
-              <div class="text">
-                <p>
-                  Gundam Holic TV / 제룡 <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2022.1.12</time>
-              </div>
-            </li>
-            <li class="card">
-              <figure class="front">
-                <img src="./img/comment/door_open.png" alt="NAOKI  <br> 스페셜 메시지 도착!!" />
-              </figure>
-              <div class="back">
-                <img src="./img/comment/3_NAOKI.png" alt="NAOKI" />
-              </div>
-              <div class="text">
-                <p>
-                  NAOKI <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2022.1.13</time>
-              </div>
-            </li>
-            <li class="card">
-              <figure class="front">
-                <img src="./img/comment/door_open.png" alt="MR.JOE  <br> 스페셜 메시지 도착!" />
-              </figure>
-              <div class="back">
-                <img src="./img/comment/4_MR.JOE.png" alt="MR.JOE" />
-              </div>
-              <div class="text">
-                <p>
-                  MR.JOE <br />
-                  스페셜 메시지 도착!!
-                </p>
-                <time>2022.1.13</time>
-              </div>
-            </li>
-          </ul>
         </section>
       </div>
     </div>
@@ -264,10 +207,11 @@
           <h2><img src="./img/title/title_02.png" alt="movie" /></h2>
           <p class="">『세대와 장르를 넘어선 다양한 메카 로봇 상품이 세상에 넘쳐나는 "가능성"을 만들어 낸다』 를 이념으로 상품 기획을 이어가는《메카스마》</p>
           <p class="">1970년대 ~ 2020년대, 40년이 넘는 시대의 작품으로부터 TV애니메이션은 물론 실사 영화와 게임까지, 다양한 신작 라인업을 프리미어 방송으로 전부 공개합니다!</p>
-          <figure class="">
+          <div class="movie_main">
             <a href="https://youtu.be/zJf8x5QN8So" target="_blank" rel="noopener"><img src="./img/movie_02.jpg"
                 alt="" /></a>
-          </figure>
+            <div class="movie_blank">클릭 후 유튜브로 연결됩니다</div>
+          </div>
           <p class="">URL：<a href="https://youtu.be/zJf8x5QN8So" target="_blank"
               rel="noopener">https://youtu.be/zJf8x5QN8So</a></p>
         </section>
@@ -376,13 +320,13 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" />
+                <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
               </div>
               <div class="swiper-slide">
-                <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" />
+                <img src="./img/exhibition/exhibition_img01.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
               </div>
               <div class="swiper-slide">
-                <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" />
+                <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
               </div>
             </div>
           </div>
@@ -419,19 +363,23 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
+                <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                  title="클릭 후 이미지가 확대됩니다" />
                 <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
               </div>
               <div class="swiper-slide">
-                <img src="./img/sales/item02.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
+                <img src="./img/sales/item02.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                  title="클릭 후 이미지가 확대됩니다" />
                 <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
               </div>
               <div class="swiper-slide">
-                <img src="./img/sales/item03.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
+                <img src="./img/sales/item03.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                  title="클릭 후 이미지가 확대됩니다" />
                 <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
               </div>
               <div class="swiper-slide">
-                <img src="./img/sales/item04.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러" />
+                <img src="./img/sales/item04.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                  title="클릭 후 이미지가 확대됩니다" />
                 <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
               </div>
             </div>
@@ -452,7 +400,8 @@
           <h2>
             <img src="./img/title/title_06.png" alt="신작 포토 갤러리" />
           </h2>
-          <a href=""><img src="./img-gallery/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a>
+          <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
+          <a href=""><img src="./img/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a>
           <p>
             「메카스마 임팩트」에 관하여 설문조사를 실시하고 있습니다. <br />
             <span>설문조사：<a href="https://forms.gle/TeEJuBqDfwJiLm31A" target="_blank"
