--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
           <p class="">1970년대 ~ 2020년대, 40년이 넘는 시대의 작품으로부터 TV애니메이션은 물론 실사 영화와 게임까지, 다양한 신작 라인업을 프리미어 방송으로 전부 공개합니다!</p>
           <div class="movie_main">
             <a href="https://youtu.be/zJf8x5QN8So" target="_blank" rel="noopener"><img src="./img/movie_02.jpg"
-                alt="" /></a>
-            <div class="movie_blank">클릭 후 유튜브로 연결됩니다</div>
+                alt="movie_kv" /></a>
           </div>
           <p class="">URL：<a href="https://youtu.be/zJf8x5QN8So" target="_blank"
               rel="noopener">https://youtu.be/zJf8x5QN8So</a></p>
@@ -291,7 +290,7 @@
                 </div>
                 <div class="column">
                   <div class="">주의 사항</div>
-                  <div class="">자세히 보기</div>
+                  <btn class="details_btn">자세히 보기</btn>
                 </div>
               </div>
 
