--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
   </header>
   <!-- //header -->
 
+  <div class="포트폴리오_공지사항">
+
+  </div>
+  <div class="포트폴리오_공지사항_텍스트">
+    <p>해당 페이지는 <br>상업적 목적이 아닌 <br>개인 포트폴리오 용도로 <br>제작되었습니다.</p>
+    <p>본 저작권은 <br>페이지 하단에서 <br>확인하실 수 있습니다.</p>
+    <a href="https://www.mechasmile.com/msi/">원본 출처 (링크)</a>
+    <div class="포트폴리오_공지사항_닫기버튼">
+      <span class="material-icons">
+        close
+      </span>
+    </div>
+  </div>
+
   <main>
     <section class="main_kv">
       <video autoplay muted loop src="./vidieo/main_kv.mp4"></video>
@@ -195,7 +209,13 @@
                 </div>
               </li>
             </ul>
+
           </div>
+          <div class="swiper-prev">
+            <span class="material-icons">arrow_back_ios</span>
+          </div>
+          <div class="swiper-next">
+            <span class="material-icons">arrow_forward_ios</span>
         </section>
       </div>
     </div>
@@ -253,6 +273,11 @@
               </div>
             </div>
           </div>
+          <div class="swiper-prev">
+            <span class="material-icons">arrow_back_ios</span>
+          </div>
+          <div class="swiper-next">
+            <span class="material-icons">arrow_forward_ios</span>
         </section>
       </div>
     </div>
@@ -292,22 +317,33 @@
                   <div class="">주의 사항</div>
                   <btn class="details_btn">자세히 보기</btn>
                 </div>
+                <div class="전시전_주의사항">
+                  <h3 class="center">주의 사항</h3>
+                  <p>참가자의 건강과 안전을 최우선으로 생각하여 본 이벤트는 상황에 따라 규모 축소, 연기, 취소 등 변경될 수 있습니다. <br />이때는 본 페이지 또는 공식 트위터 (<a
+                      href="https://twitter.com/gsc_mechasmile" target="_blank" rel="noopener">@gsc_mechasmile</a>)에
+                    공지하겠습니다.</p>
+                  <p>신종 코로나 바이러스 감염증 확대 방지에 협조해 주십시오.</p>
+                  <p>
+                    ■내방하시기 전에 반드시 확인하시기 바랍니다. <br />체온이 37.5도 이상인 분은 입장을 자제해 주세요. <br />발열, 기침, 재채기, 콧물, 권태감, 전신통, 설사 등의
+                    증상이 있으신 분은 방문을 삼가하여 주시기 바랍니다. <br />정부가 입국 제한을 실시하고 있는 국가, 지역에서 일본으로 입국한 후 14일간
+                    경과하지 않은 분은 입장을 삼가 주십시오.
+                  </p>
+                  <p>
+                    ■입장 시에 대하여 마스크 꼭 착용 부탁드립니다. <br />입구에서 소독용 알코올로 반드시 손가락 소독을 실시하여 주십시오. <br />입구에서 체온 측정을 실시합니다.
+                    37.5도 이상 열이 확인되면 입장이 불가합니다. <br />감상 중 몸 상태가 나빠진 경우, 가까운 직원에게 말을 걸어 주십시오. <br />만일
+                    방문하신 고객에게 감염이 발각되면 일제히 메일로 연락을 드리도록 하겠습니다. <br />혼잡하거나 주변에 대기열이 생길 경우, 예고 없이 이벤트를 취소할 수 있습니다.
+                    <br />현장에서 직원의 요청에 동의하지 않을 경우 입장이 불가합니다.
+                  </p>
+                  <p>■ 감상에 대하여 다른 고객과의 간격을 두고 감상하세요. <br />진열장이나 집기에 직접 손을 대지 않도록 부탁드립니다. <br />회장 내에서의 대화는 가급적 삼가주세요.
+                  </p>
+                  <div class="전시전_주의사항_닫기버튼">
+                    <span class="material-icons">
+                      close
+                    </span>
+                  </div>
+                </div>
               </div>
 
-              <!-- <div class="note inner">
-                    <h3 class="center">주의 사항</h3>
-                    <p>참가자의 건강과 안전을 최우선으로 생각하여 본 이벤트는 상황에 따라 규모 축소, 연기, 취소 등 변경될 수 있습니다. <br />이때는 본 페이지 또는 공식 트위터 (<a href="https://twitter.com/gsc_mechasmile" target="_blank" rel="noopener">@gsc_mechasmile</a>)에 공지하겠습니다.</p>
-                    <p>신종 코로나 바이러스 감염증 확대 방지에 협조해 주십시오.</p>
-                    <p>
-                      ■내방하시기 전에 반드시 확인하시기 바랍니다. <br />체온이 37.5도 이상인 분은 입장을 자제해 주세요. <br />발열, 기침, 재채기, 콧물, 권태감, 전신통, 설사 등의 증상이 있으신 분은 방문을 삼가하여 주시기 바랍니다. <br />정부가 입국 제한을 실시하고 있는 국가, 지역에서 일본으로 입국한
-                      후 14일간 경과하지 않은 분은 입장을 삼가 주십시오.
-                    </p>
-                    <p>
-                      ■입장 시에 대하여 마스크 꼭 착용 부탁드립니다. <br />입구에서 소독용 알코올로 반드시 손가락 소독을 실시하여 주십시오. <br />입구에서 체온 측정을 실시합니다. 37.5도 이상 열이 확인되면 입장이 불가합니다. <br />감상 중 몸 상태가 나빠진 경우, 가까운 직원에게 말을 걸어 주십시오.
-                      <br />만일 방문하신 고객에게 감염이 발각되면 일제히 메일로 연락을 드리도록 하겠습니다. <br />혼잡하거나 주변에 대기열이 생길 경우, 예고 없이 이벤트를 취소할 수 있습니다. <br />현장에서 직원의 요청에 동의하지 않을 경우 입장이 불가합니다.
-                    </p>
-                    <p>■ 감상에 대하여 다른 고객과의 간격을 두고 감상하세요. <br />진열장이나 집기에 직접 손을 대지 않도록 부탁드립니다. <br />회장 내에서의 대화는 가급적 삼가주세요.</p>
-                  </div> -->
             </div>
             <div class="maps">
               <iframe
@@ -328,104 +364,108 @@
                 <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
               </div>
             </div>
-          </div>
-          <p class="center">※사진은 2021년 개최한「THE합체전」의 사진입니다.</p>
-        </section>
-      </div>
-    </div>
-    <!-- //exhibition -->
-
-    <div class="background__color__sales">
-      <div class="background__color__cover">
-        <section id="sales" class="sales inner content">
-          <h2>
-            <img src="./img/title/title_05.png" alt="SALES 개최 기념 판매 정보" />
-          </h2>
-          <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
-
-          <div class="instructions">
-            <div class="table">
-              <div class="column">
-                <div class="">판매 기간</div>
-                <div class="">2022년 1월 15일(토) 10：00 ～ 1월 31일(월) 21：00 까지</div>
-              </div>
-              <div class="column">
-                <div class="">판매 URL</div>
-                <div class=""><a href="https://goodsmile.link/3GS1OUy" target="_blank"
-                    rel="noopener">https://goodsmile.link/3GS1OUy</a></div>
-              </div>
-              <p class="">※수량에 제한이 있으므로 미리 양해 부탁드립니다.</p>
-            </div>
-          </div>
-
-
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
-                  title="클릭 후 이미지가 확대됩니다" />
-                <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/sales/item02.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
-                  title="클릭 후 이미지가 확대됩니다" />
-                <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/sales/item03.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
-                  title="클릭 후 이미지가 확대됩니다" />
-                <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
-              </div>
-              <div class="swiper-slide">
-                <img src="./img/sales/item04.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
-                  title="클릭 후 이미지가 확대됩니다" />
-                <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
-              </div>
-            </div>
+            <p class="center">※사진은 2021년 개최한「THE합체전」의 사진입니다.</p>
           </div>
           <div class="swiper-prev">
-            <span class="material-icons">arrow_back</span>
+            <span class="material-icons">arrow_back_ios</span>
           </div>
           <div class="swiper-next">
-            <span class="material-icons">arrow_forward</span>
+            <span class="material-icons">arrow_forward_ios</span>
+          </div>
         </section>
       </div>
-    </div>
-    <!-- //sales -->
+      <!-- //exhibition -->
 
-    <div class="background__color__gallery">
-      <div class="background__color__cover">
-        <section id="gallery" class="gallery inner content">
-          <h2>
-            <img src="./img/title/title_06.png" alt="신작 포토 갤러리" />
-          </h2>
-          <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
-          <a href=""><img src="./img/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a>
-          <p>
-            「메카스마 임팩트」에 관하여 설문조사를 실시하고 있습니다. <br />
-            <span>설문조사：<a href="https://forms.gle/TeEJuBqDfwJiLm31A" target="_blank"
-                rel="noopener">https://forms.gle/TeEJuBqDfwJiLm31A</a></span>
-          </p>
-        </section>
-        <!-- //gallery -->
+      <div class="background__color__sales">
+        <div class="background__color__cover">
+          <section id="sales" class="sales inner content">
+            <h2>
+              <img src="./img/title/title_05.png" alt="SALES 개최 기념 판매 정보" />
+            </h2>
+            <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
 
-        <section class="othersite inner">
-          <ul class="flex">
-            <li class="">
-              <a href="https://www.mechasmile.com" target="_blank" rel="noopener">
-                <img src="./img/bnr_oficial_kr.png" alt="메카스마 공식 사이트는 이쪽 (일본어)" />
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/gsc_mechasmile" target="_blank" rel="noopener">
-                <img src="./img/bnr_tw_kr.png" alt="Twitter에서 신작 정보 공개 중! (일본어) @gsc_mechasmile" />
-              </a>
-            </li>
-          </ul>
-        </section>
+            <div class="instructions">
+              <div class="table">
+                <div class="column">
+                  <div class="">판매 기간</div>
+                  <div class="">2022년 1월 15일(토) 10：00 ～ 1월 31일(월) 21：00 까지</div>
+                </div>
+                <div class="column">
+                  <div class="">판매 URL</div>
+                  <div class=""><a href="https://goodsmile.link/3GS1OUy" target="_blank"
+                      rel="noopener">https://goodsmile.link/3GS1OUy</a></div>
+                </div>
+                <p class="">※수량에 제한이 있으므로 미리 양해 부탁드립니다.</p>
+              </div>
+            </div>
+
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./img/sales/item01.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item02.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item03.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item04.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-prev">
+              <span class="material-icons">arrow_back_ios</span>
+            </div>
+            <div class="swiper-next">
+              <span class="material-icons">arrow_forward_ios</span>
+          </section>
+        </div>
       </div>
-    </div>
-    <!-- //othersite -->
+      <!-- //sales -->
+
+      <div class="background__color__gallery">
+        <div class="background__color__cover">
+          <section id="gallery" class="gallery inner content">
+            <h2>
+              <img src="./img/title/title_06.png" alt="신작 포토 갤러리" />
+            </h2>
+            <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
+            <a href=""><img src="./img/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a>
+            <p>
+              「메카스마 임팩트」에 관하여 설문조사를 실시하고 있습니다. <br />
+              <span>설문조사：<a href="https://forms.gle/TeEJuBqDfwJiLm31A" target="_blank"
+                  rel="noopener">https://forms.gle/TeEJuBqDfwJiLm31A</a></span>
+            </p>
+          </section>
+          <!-- //gallery -->
+
+          <section class="othersite inner">
+            <ul class="flex">
+              <li class="">
+                <a href="https://www.mechasmile.com" target="_blank" rel="noopener">
+                  <img src="./img/bnr_oficial_kr.png" alt="메카스마 공식 사이트는 이쪽 (일본어)" />
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/gsc_mechasmile" target="_blank" rel="noopener">
+                  <img src="./img/bnr_tw_kr.png" alt="Twitter에서 신작 정보 공개 중! (일본어) @gsc_mechasmile" />
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+      <!-- //othersite -->
   </main>
 
   <footer class="inner">
