--- a/index.html
+++ b/index.html
@@ -63,18 +63,30 @@
     </div>
     <!-- //wrapper -->
 
-    <!-- <div class="badges">
-        <div class="badge">
-          <a href="javascript:void(0)"><img src="./img/badges/badges (1).webp" alt="Badge" /></a>
-        </div>
-        <div class="badge">
-          <a href="javascript:void(0)"><img src="./img/badges/badges (2).jpg" alt="Badge" /></a>
-        </div>
-        <div class="badge">
-          <a href="javascript:void(0)"><img src="./img/badges/badges (1).jpg" alt="Badge" /></a>
-        </div>
-      </div> -->
+    <div class="badges">
+      <div class="badge">
+        <a href="javascript:void(0)"><img src="./img/badges/badges (1).webp" alt="Badge" /></a>
+      </div>
+      <div class="badge">
+        <a href="javascript:void(0)"><img src="./img/badges/badges (2).jpg" alt="Badge" /></a>
+      </div>
+      <div class="badge">
+        <a href="javascript:void(0)"><img src="./img/badges/badges (1).jpg" alt="Badge" /></a>
+      </div>
+    </div>
     <!-- //BADGES -->
+<!-- 
+    <div class="badges_small ">
+      <div class="badge_small  "> <a href="javascript:void(0)"><img src="./img/badges/logo_mecasma.png" alt="Badge" /></a>
+      </div>
+      <div class="badge_small "> <a href="javascript:void(0)"><img src="./img/badges/sns_t.png" alt="Badge" /></a>
+      </div>
+      <div class="badge_small "> <a href="javascript:void(0)"><span class="material-icons">
+        edit_note
+        </span></a>
+      </div>
+    </div> -->
+
   </header>
   <!-- //header -->
 
@@ -363,6 +375,9 @@
               <div class="swiper-slide">
                 <img src="./img/exhibition/exhibition_img02.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
               </div>
+              <div class="swiper-slide">
+                <img src="./img/exhibition/exhibition_img01.png" alt="2021년 개최한「THE합체전」" title="클릭 후 이미지가 확대됩니다" />
+              </div>
             </div>
             <p class="center">※사진은 2021년 개최한「THE합체전」의 사진입니다.</p>
           </div>
@@ -421,13 +436,32 @@
                     title="클릭 후 이미지가 확대됩니다" />
                   <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
                 </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item05.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item06.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item07.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/sales/item08.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
               </div>
-            </div>
-            <div class="swiper-prev">
-              <span class="material-icons">arrow_back_ios</span>
-            </div>
-            <div class="swiper-next">
-              <span class="material-icons">arrow_forward_ios</span>
+              <div class="swiper-prev">
+                <span class="material-icons">arrow_back_ios</span>
+              </div>
+              <div class="swiper-next">
+                <span class="material-icons">arrow_forward_ios</span>
           </section>
         </div>
       </div>
@@ -439,13 +473,209 @@
             <h2>
               <img src="./img/title/title_06.png" alt="신작 포토 갤러리" />
             </h2>
-            <p class="">메카스마 임팩트의 개최와 더불어 지금까지 판매가 이루어졌던 일부 상품의 온라인 판매를 진행합니다.<br />이번 기회를 놓치지 마세요!</p>
-            <a href=""><img src="./img/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a>
-            <p>
+            <p class="">메카스마 임팩트 신작 아이템 일거 공개!</p>
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img01_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img02_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img03_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img04_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img05_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img06_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img07_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img08_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img09_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img10_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img11_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img12_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img13_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img14_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img15_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img16_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img17_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img18_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img19_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img20_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img21_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img22_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img23_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img24_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img25_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img26_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img27_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img28_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img29_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img30_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img31_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img32_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img33_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img34_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img35_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img36_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./img/gallery/gallery_img37_thum.png" alt="초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러"
+                    title="클릭 후 이미지가 확대됩니다" />
+                  <p>초합체 초인 DX 풀 파워 그리드맨 Initial Fighter 컬러</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-prev">
+              <span class="material-icons">arrow_back_ios</span>
+            </div>
+            <div class="swiper-next">
+              <span class="material-icons">arrow_forward_ios</span>
+            </div>
+
+            <!-- <a href=""><img src="./img/bnr_gallery_kr.png" alt="신작 포토 갤러리 아이템" /></a> -->
+            <!-- <p>
               「메카스마 임팩트」에 관하여 설문조사를 실시하고 있습니다. <br />
               <span>설문조사：<a href="https://forms.gle/TeEJuBqDfwJiLm31A" target="_blank"
                   rel="noopener">https://forms.gle/TeEJuBqDfwJiLm31A</a></span>
-            </p>
+            </p> -->
           </section>
           <!-- //gallery -->
 
