--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       </div>
     </div> -->
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  
+  
+  
   </header>
   <!-- //header -->
 
