--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
     <!-- 사이드 메뉴바 -->
     <div class="side_menu_bar">
       <img src="./img/badges/bg_sns.png" alt="side_menu_bar">
+      <div class="box">
+      
+      </div>
     </div>
     <!-- 사이드 메뉴바 닫힘 -->
 
